--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1 id="title">Ability for LLMs to reconstruct moved points</h1>
+    <div class="link-container">
+        <a href="https://github.com/primordialls/roomplans_elia">GitHub Repo</a>
+    </div>
     <h2>Original:</h2>
     <p>Original point highlighted by green circle.</p>
     <img class="image" src="reconstruction/original.png" alt="Element 17">
